--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ homepage = "https://github.com/ark0f/issue-47048-fix"
 repository = "https://github.com/ark0f/issue-47048-fix"
 keywords = ["build-dependencies", "windows", "no_std"]
 categories = ["development-tools"]
+description = "Fix issue #47048 in github.com/rust-lang/rust"
+license = "No license"
 
 [lib]
 path = "lib.rs"
