--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>"]
 description = "Issue #47048 fix"
 repository = "https://github.com/ark0f/issue-47048-fix"
+documentation = "https://docs.rs/issue-47048-fix"
 keywords = ["windows", "build"]
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
