--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rust:
 script:
     - rustup component add rust-std --target x86_64-pc-windows-gnu
     - cargo test --all-targets
-    - cargo doc --all --all-features --target x86_64-pc-windows-gnu
+    - cargo doc --all --all-features --no-deps --target x86_64-pc-windows-gnu
 deploy:
     provider: pages
     skip-cleanup: true
@@ -14,4 +14,4 @@ deploy:
     on:
         branch: master
     target-branch: gh-pages
-    local-dir: target/x86_64-pc-windows-gnu/doc
+    local-dir: target/x86_64-pc-windows-gnu/doc/issue-47048-fix
